app/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 24.6,95%,53.1%;
    --primary-foreground: 355.7 100% 99%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 45%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 72% 51%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 24.6,95%,53.1%;
    --chart-1: 347 77% 50%;
    --chart-2: 352 83% 91%;
    --chart-3: 350 80% 72%;
    --chart-4: 351 83% 82%;
    --chart-5: 349 77% 62%;
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;
    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 24.6,95%,53.1%;
    --primary-foreground: 355.7 100% 99%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 72% 51%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 221.2 83.2% 53.3%;
    --chart-1: 347 77% 50%;
    --chart-2: 349 77% 62%;
    --chart-3: 350 80% 72%;
    --chart-4: 351 83% 82%;
    --chart-5: 352 83% 91%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

@layer utilities {
  .text-gradient {
    @apply text-transparent bg-clip-text;
  }
}

.citation {
  position: relative;
  display: inline-block;
  padding: 4px;
  border-radius: 0.5rem;
  color: var(--foreground);
  font-style: italic;
  --gap: -16px;
}

.citation::before {
  content: "“";
  font-size: 3rem;
  position: absolute;
  top: -12px;
  left: -12px;
  line-height: 1;
  color: hsl(var(--primary));
}

.citation::after {
  content: "”";
  font-size: 3rem;
  position: absolute;
  bottom: -16px;
  right: -4px;
  line-height: 1;
  color: hsl(var(--primary));
}

.citation strong {
  font-weight: 700;
  background: hsl(var(--primary) / 0.5);
  display: inline;
  padding: 2px;
  margin: -2px;
}

.dot-pattern {
  background-color: var(--dot-background);
  opacity: 0.8;
  background-image: radial-gradient(
    var(--dot-color) 0.5px,
    var(--dot-background) 0.5px
  );
  background-size: var(--size, 10px) var(--size, 10px);
}

.prose {
  scroll-margin-top: 40px;

  & h1,
  & h2,
  & h3,
  & h4,
  & h5,
  & h6 {
    position: relative;
    scroll-margin-top: 70px;

    &:hover {
      & .icon-link {
        opacity: 1;
      }
    }
  }

  & .icon.icon-link {
    width: 20px;
    height: 100%;
    display: block;
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    left: -24px;

    opacity: 0;
    transition: opacity 0.2s ease;
    &::before {
      content: "#";
      font-size: 1.5rem;
      color: hsl(var(--primary));
    }
  }
}

